# tauri-plugin-browser-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
docs/: architecture.md  getting-started.md  hidden-bridge.md  verification.md
example/: index.html  package.json  tsconfig.json  vite.config.ts
example/src/: main.ts  style.css
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs  main.rs
plugin/: Cargo.toml  build.rs  package.json  tsconfig.json  tsup.config.ts
plugin/permissions/: default.toml  proxy-url.toml  register-bridge.toml  relay-event.toml  relay-result.toml
plugin/permissions/autogenerated/: reference.md
plugin/permissions/autogenerated/commands/: proxy_url.toml  register_bridge.toml  relay_event.toml
plugin/permissions/schemas/: schema.json
plugin/src/: commands.rs  error.rs  lib.rs  server.rs  state.rs
plugin/src-js/: binary.ts  index.ts  shim.ts
plugin/tests/: state.rs
plugin/vite/: index.ts
scripts/: pack-release.sh
tests/: package.json  playwright.config.ts  playwright.shim.config.ts
tests/demo/: README.md  boot-full-stack.sh  browser-proxy-demo.webm  run-demo.mjs  teardown.sh
tests/specs/: shim-unit.spec.ts  smoke.spec.ts
