[workspace]
resolver = "2"
members = [
  "plugin",
  "example/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/WjcmeAFJb/tauri-plugin-browser-proxy"

[workspace.dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
async-stream = "0.3"
