[package]
name = "tauri-plugin-browser-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mirror a Tauri webview to an ordinary browser tab over HTTP + SSE."
# `links` is required by tauri-plugin's build helper to prevent duplicate
# versions being linked into the same binary.
links = "tauri-plugin-browser-proxy"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
log = "0.4"
async-stream = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
