[package]
name = "browser-proxy-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "browser_proxy_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-browser-proxy = { path = "../../plugin" }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
